crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_mutability_specifiers/function_types/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: State mutability already specified as "pure".
   ╭─[input.sol:5:32]
   │
 5 │   function foo(function() pure view returns (uint) callback) {}
   │                                ──┬─  
   │                                  ╰─── Error occurred here.
───╯
